estructurando el portafolio

--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div>Hola q ase!</div>
-    <div id="miBeti">Musho Beti!!</div>
+    <div id="header">
+        <h1>Mi cabecero</h1>
+    </div>
+    <div id="nav">Mi barra de navegación</div>
+    <div id="container">
+        <h2>El cuerpo de mi Portafolio</h2>
+        <div>Hola q ase!</div>
+        <div id="miBeti">Musho Beti!!</div>
+    </div>
+    <div id="footer">
+
+    </div>
 </body>
 </html>
