añadiendo el pie

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="miBeti">Musho Beti!!</div>
     </div>
     <div id="footer">
-
+        <div>El pie de mi Portafolio</div>
     </div>
 </body>
 </html>
