subiendo cambios nuevos

--- a/index.html
+++ b/index.html
@@ -6,20 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio Señor Anderson</title>
 
+    <link href="fonts/matrix.ttf">
     <link rel="stylesheet" href="css/style.css">
+    <link href="fonts/matrix.ttf">
 </head>
 <body>
-    <div id="header">
-        <h1>Mi cabecero</h1>
-    </div>
-    <div id="nav">Mi barra de navegación</div>
-    <div id="container">
-        <h2>El cuerpo de mi Portafolio</h2>
-        <div>Hola q ase!</div>
-        <div id="miBeti">Musho Beti!!</div>
-    </div>
-    <div id="footer">
-        <div>El pie de mi Portafolio</div>
+    <div id="wrapper">
+        <header id="myheader">
+            <h1>Mi cabecero</h1>
+        </header>
+        <div id="nav">Mi barra de navegación</div>
+        <div id="container">
+            <h2>El cuerpo de mi Portafolio</h2>
+            <div>Hola q ase!</div>
+            <div id="miBeti">Musho Beti!!</div>
+        </div>
+        <footer id="myfooter">
+            <div>El pie de mi Portafolio</div>
+        </footer>
     </div>
 </body>
 </html>
