--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio Señor Anderson</title>
 
-    <link href="fonts/matrix.ttf">
     <link rel="stylesheet" href="css/style.css">
-    <link href="fonts/matrix.ttf">
+    <link href="https://github.com/JoseManuelGarrido/Portfolio/blob/gh-pages/fonts/matrix.ttf">
 </head>
 <body>
     <div id="wrapper">
